--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 server.port=80
 spring.datasource.url = jdbc:mysql://localhost:3306/demo_db
-spring.datasource.username = root
-spring.datasource.password = SantoshWathore12345
-##Swamiom@9823
+spring.datasource.username = 
+spring.datasource.password =
+
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
